--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     <div class="row">
       <label><input type="checkbox" id="showFullToggle"> Show full sentence</label>
       <label><input type="checkbox" id="speechToggle"> Read aloud</label>
+
+      <!-- 🔽 NEW TOGGLE ADDED -->
+      <label><input type="checkbox" id="showNotesToggle"> Show descriptions in sentences</label>
+      <!-- 🔼 NEW TOGGLE ADDED -->
     </div>
 
     <div class="row">
